# TinyCompiler

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
data/: actionTable.txt  action_table.csv  first.txt  follow.txt  gotoTable.txt  goto_table.csv  grammar.txt  grammer.txt  lexical.txt  symbolTable.txt  syntax.txt  test.sy
data/testsample/: test-1.sy  test-2.sy  test-3.sy  test.sy
docs/: BUILD.md
docs/report/: lexical.md  report.md
include/lexical/: FSM.h  SymbolTable.h  TokenCodes.h  util.h
include/syntax/: LRItemSet.h  LRTable.h  SetCalculate.h  analysis.h  define.h  grammar.h
lex/: CMakeLists.txt
lex/include/: FSM.h  Lexer.h  SymbolTable.h  Token.h  TokenCodes.h  lexical.h  util.h
lex/src/: FSM.cpp  Lexer.cpp  SymbolTable.cpp  Token.cpp  lexical.cpp  util.cpp
ll1_converter/: CMakeLists.txt  Grammar.cpp  Grammar.h  LL1Converter.cpp  LL1Converter.h  main.cpp
result/: first.txt  follow.txt  lexical.txt  symbolTable.txt  syntax_analysis.txt  table.txt
src/: CMakeLists.txt  main.cpp
src/lexical/: CMakeLists.txt  FSM.cpp  SymbolTable.cpp  lexical.cpp  util.cpp
src/syntax/: CMakeLists.txt  LRItemSet.cpp  LRTable.cpp  SetCalculate.cpp  analysis.cpp  grammar.cpp
syntax/: CMakeLists.txt
syntax/include/: first_follow.h  grammar.h  parser.h  parser_table.h  syntax.h
syntax/src/: first_follow.cpp  grammar.cpp  parser.cpp  parser_table.cpp  syntax.cpp
test/: CMakeLists.txt  LexerTest.cpp  ParserTest.cpp
